release_small_test.log
/home/ghuntley/cursed/build.zig:542:11: error: unused local constant
    const enable_memory_optimization = b.option(bool, "memory-opt", "Enable memory optimization") orelse true;
          ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ghuntley/cursed/build.zig:541:11: error: unused local constant
    const enable_performance_profiling = b.option(bool, "profile", "Enable performance profiling") orelse false;
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ghuntley/cursed/build.zig:540:11: error: unused local constant
    const enable_fast_build = b.option(bool, "fast-build", "Prioritize compilation speed over runtime performance") orelse false;
          ^~~~~~~~~~~~~~~~~
/home/ghuntley/cursed/build.zig:539:11: error: unused local constant
    const llvm_optimization_level = b.option([]const u8, "llvm-opt", "LLVM optimization level (O0, O1, O2, O3, Os, Oz)") orelse "O2";
          ^~~~~~~~~~~~~~~~~~~~~~~
/home/ghuntley/cursed/build.zig:538:11: error: unused local constant
    const enable_compilation_cache = b.option(bool, "cache", "Enable compilation caching") orelse true;
          ^~~~~~~~~~~~~~~~~~~~~~~~
/home/ghuntley/cursed/build.zig:537:11: error: unused local constant
    const enable_parallel_compilation = b.option(bool, "parallel", "Enable parallel compilation") orelse true;
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ghuntley/cursed/build.zig:521:19: error: expected error union type, found 'bool'
    if (ninja_env == null) {
        ~~~~~~~~~~^~~~~~~
referenced by:
    runBuild__anon_24451: /opt/zig/lib/std/Build.zig:2427:33
    main: /opt/zig/lib/compiler/build_runner.zig:339:29
    5 reference(s) hidden; use '-freference-trace=7' to see all references
